<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_configuracao"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/item_adicionarBem"
        android:showAsAction="never"
        android:title="@string/add_bem"
        android:menuCategory="container" />
    
    <item 
        android:id="@+id/item_adicionarDireito"
        android:showAsAction="withText"
        android:title="@string/add_direito"
        android:menuCategory="system" />
    
    <item 
        android:id="@+id/item_adicionarObrigacoes"
        android:showAsAction="collapseActionView"
        android:title="@string/add_obrigacao"
        android:menuCategory="secondary" />

</menu>
